# voro-guard

./: .env.example  .envrc.1password.example  .envrc.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  README.voro-mcp.md  STATUS.md  openapi.json  pyproject.toml  requirements.txt  server.json
.claude/backups/: 1-backup-6th-Mar-2026-8-11am.md  1-backup-6th-Mar-2026-9-19am.md
.claude/rules/: conventions.md  working-memory.md
.github/: pull_request_template.md
.github/scripts/: aggregate_master.py  parse_pr_body.py  update_sprint.py  update_status.py
.github/workflows/: check-claude-md.yml  docs.yml  lifecycle-post-merge.yml  update-status.yml
.voro/: derived-artifacts.yaml
app/: config.py  main.py  mcp_server.py  metrics.py  security.py
app/core/: artifacts.py  callgraph.py  docs_ingest.py  docs_store.py  identity.py  indexer.py  ingest.py  parser.py  poller.py  signing.py  store.py
app/models/: schemas.py
app/routes/: hydration.py  index.py  learning.py  query.py
config/: poll.json
data/artifacts/: voro-brain__sha256_1a31fb15efeeca5b8413d91d01145dd8e6c441ab6f01a52ec7b0b3f9c16a0b44__7bac8d6b046296a3a03f03b1.json  voro-brain__sha256_38b6d5562ed96617cac0379444ea764fddce623bc2a2c1562b132cf1664fc618__a600262affd0f62d21564f56.json  (+4 more)
docs/: CODEBASE_MAP.md  DEPLOY_ZEABUR.md
scripts/: generate_codebase_map.py  smoke_prod.sh  validate_docs_contract.py
tests/unit/: test_auth.py  test_callgraph.py  test_docs_indexer_runtime.py  test_poller.py  (+11 more)
tools/: derived_artifacts.py
voro_mcp/: config.py  main.py  mcp_server.py  security.py
(+20 files in other folders)
